infra/gatekeeper/base/allow-from-namespace-ingress-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-namespace-ingress
  namespace: gatekeeper-system
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - {}
  # - from:
  #   - podSelector:
  #       matchLabels: {}
