infra/gatekeeper/base/allow-from-node-ingress-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-node
  namespace: gatekeeper-system
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.1.119.218/32
        - ipBlock:
            cidr: 10.1.86.74/32
  egress:
    - to:
        - ipBlock:
            cidr: 10.1.119.218/32
        - ipBlock:
            cidr: 10.1.86.74/32
